# aoc2024

./: .gitignore  Justfile  LICENSE  README.md
day1/: default.nix  part1.nix
day2/: main.exs
day3/src/: main.rs  part1.rs  part2.rs
day4/: Main.kts
day6/: dune-project
