(lang dune 3.17)

(name day6)

(generate_opam_files true)

(source
 (github oskardotglobal/aoc2024))

(authors "Oskar Manhart <me@oskar.global>")

(package
 (name day6)
 (depends ocaml)
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
